--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start_test": "set NODE_ENV=development && node ./app/bin/www",
-    "start": "set NODE_ENV=development && nodemon server.js",
+    "start": "set NODE_ENV=development && node server.js",
     "watch": "nodemon"
   },
   "keywords": [
@@ -26,6 +26,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
+    "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.3",
     "multer": "^1.4.2",
