--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "crypto-js": "^4.0.0",
     "express": "^4.17.1",
     "form-data": "^4.0.0",
     "handlebars": "^4.7.7",
