--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.7",
     "redis": "^3.0.2",
-    "sequelize": "^6.5.0"
+    "sequelize": "^6.5.0",
+    "sharp": "^0.28.3"
   }
 }
