--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "helmet": "^4.5.0",
     "jsonwebtoken": "^8.5.1",
     "mariadb": "^2.5.3",
+    "midtrans-client": "^1.3.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
     "node-cron": "^3.0.0",
